@@ -35,15 +35,10 @@ static Thread *rng_thread;
 /* Depth of the conversion buffer.  */
 #define ADC_GRP1_BUF_DEPTH      256
 
-#if !defined(NEUG_ADC_SETTING1_SMPR1)
-#define NEUG_ADC_SETTING1_SMPR1 ADC_SMPR1_SMP_SENSOR(ADC_SAMPLE_1P5) \
-                              | ADC_SMPR1_SMP_VREF(ADC_SAMPLE_1P5)
-#define NEUG_ADC_SETTING1_SMPR2 ADC_SMPR2_SMP_AN0(ADC_SAMPLE_1P5)
-#define NEUG_ADC_SETTING1_SQR3  ADC_SQR3_SQ1_N(ADC_CHANNEL_SENSOR)   \
-                              | ADC_SQR3_SQ2_N(ADC_CHANNEL_VREFINT)  \
-                              | ADC_SQR3_SQ3_N(ADC_CHANNEL_IN0)
-#define NEUG_ADC_SETTING1_NUM_CHANNELS 3
-#endif
+#define NEUG_ADC_SETTING1_SMPR1 ADC_SMPR1_SMP_VREF(ADC_SAMPLE_1P5)
+#define NEUG_ADC_SETTING1_SMPR2 0
+#define NEUG_ADC_SETTING1_SQR3  ADC_SQR3_SQ1_N(ADC_CHANNEL_VREFINT)
+#define NEUG_ADC_SETTING1_NUM_CHANNELS 1
 
 #if !defined(NEUG_ADC_SETTING2_SMPR1)
 #define NEUG_ADC_SETTING2_SMPR1 0
